--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "emailjs-com": "^3.2.0",
     "fslightbox-react": "^1.7.6",
     "isotope-layout": "^3.0.6",
     "lightbox2": "^2.11.4",
